fix: settings: toolbar button alignment + item wrapping issues on phones

--- a/src/Styles/settings.css
+++ b/src/Styles/settings.css
@@ -130,6 +130,7 @@
     }
     & .setting-item-control {
         .is-phone & {
+            justify-content: flex-end !important;
             width: unset !important;
         }
     }
@@ -222,7 +223,7 @@
 .note-toolbar-setting-item-preview {
     display: flex;
     flex-grow: 1;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     font-size: var(--font-ui-medium);
     column-gap: 0.5em;
     padding: 8px;
